challenges/dev/challenge-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: challenge-pod
  labels:
    app: challenge
spec:
  containers:
  - name: challenge-container
    image: rydersel/debiantest:latest
    ports:
    - containerPort: 22
      name: ssh
    securityContext:
      runAsUser: 0  # Run as root user
      privileged: false
  - name: bridge
    image: rydersel/bridge:latest
    ports:
    - containerPort: 5000
      name: http
    resources: # Will finetune exact limits later
      limits:
        memory: "512Mi"
        cpu: "500m"
      requests:
        memory: "256Mi"
        cpu: "250m"
