challenges/dev/network-policy.yaml
# For now the challenge container can only communicate with the bridge but bridge can communicate with any.
# Will change this later to only allow communication with the WebOS container.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: challenge-to-bridge-only
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: challenge
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: bridge
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: bridge
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: bridge-allow-all
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: bridge
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
